# ChangeLog for dev-python/argparse
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/argparse/ChangeLog,v 1.36 2012/12/08 16:15:24 mgorny Exp $

*argparse-1.2.1-r2 (08 Dec 2012)

  08 Dec 2012; Michał Górny <mgorny@gentoo.org> +argparse-1.2.1-r2.ebuild:
  Revbump again to end the transitional period and stop installing argparse for
  new Python versions.

  08 Dec 2012; Michał Górny <mgorny@gentoo.org> argparse-1.2.1-r1.ebuild:
  Add PYTHON_USEDEP on migrated packages.

  02 Nov 2012; Michał Górny <mgorny@gentoo.org> argparse-1.2.1-r1.ebuild:
  Re-enable all Python implementations but warn if the package is not useful,
  requesting people to depclean it.

*argparse-1.2.1-r1 (29 Oct 2012)

  29 Oct 2012; Michał Górny <mgorny@gentoo.org> +argparse-1.2.1-r1.ebuild:
  Convert to distutils-r1, build only for implementations lacking built-in
  argparse.

  05 Aug 2012; Richard Yao <ryao@gentoo.org> argparse-1.2.1.ebuild:
  Keyword ~x64-freebsd

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> argparse-1.2.1.ebuild:
  keyword ~amd64-fbsd

  01 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> argparse-1.2.1.ebuild:
  Set COLUMNS to make tests pass (bug 397345, thanks Dustin Polke).

  01 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Remove myself as a maintainer.

  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> argparse-1.2.1.ebuild:
  Change to generic license

  26 Jun 2011; Naohiro Aota <naota@gentoo.org> argparse-1.2.1.ebuild:
  Add ~x86-fbsd, bug #346005

  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> argparse-1.2.1.ebuild:
  m68k/s390/sh stable

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -argparse-1.1.ebuild:
  Remove old ebuilds. Requested by Arfrever

  23 Jun 2011; Brent Baude <ranger@gentoo.org> argparse-1.2.1.ebuild:
  Marking argparse-1.2.1 ppc for bug 364727

  29 May 2011; Raúl Porcel <armin76@gentoo.org> argparse-1.2.1.ebuild:
  alpha/ia64/sparc stable wrt #364727
