@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.164 2012/12/01 10:46:28 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.165 2012/12/10 00:02:49 jer Exp $
+
+  10 Dec 2012; Jeroen Roovers <jer@gentoo.org> setuptools-0.6.30-r1.ebuild:
+  Stable for HPPA (bug #446496).
 
   01 Dec 2012; Michał Górny <mgorny@gentoo.org> setuptools-0.6.30-r1.ebuild:
   Force in-source build in the older version too.
