@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/argparse
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/argparse/ChangeLog,v 1.36 2012/12/08 16:15:24 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/argparse/ChangeLog,v 1.37 2012/12/10 00:02:55 jer Exp $
+
+  10 Dec 2012; Jeroen Roovers <jer@gentoo.org> argparse-1.2.1-r1.ebuild:
+  Stable for HPPA (bug #446496).
 
 *argparse-1.2.1-r2 (08 Dec 2012)
 
